--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Young application</title>
+    <title>FollowMe application</title>
   </head>
 
   <body>
